# PICOMIDDLE

./: .gitignore  PROJECT.md  README.md  boot.py  code.py  setup.sh
adafruit-circuitpython-bundle-9.x-mpy-20260326/: VERSIONS.txt
adafruit-circuitpython-bundle-9.x-mpy-20260326/lib/: adafruit_st7735r.mpy  adafruit_tmag5273.mpy  adafruit_vcnl4030.mpy  neopixel.mpy
adafruit-circuitpython-bundle-9.x-mpy-20260326/lib/adafruit_ads122c04/: ads122c04.mpy
firmware/: CMakeLists.txt  ble_hid.c  ble_hid.h  btstack_config.h  keyboard.gatt  main.c  tusb_config.h  usb_host.c  usb_host.h
